module_4: add sql processor, change scripts

--- a/Potestas/Potestas.Apps.Terminal/App.config
+++ b/Potestas/Potestas.Apps.Terminal/App.config
@@ -6,6 +6,6 @@
   <connectionStrings>
     <add name="ObservationConnection"
          providerName="System.Data.SqlClient"
-         connectionString="Data Source=(local);Initial Catalog=Observation;Integrated Security=True"/>
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Observation;Integrated Security=True"/>
   </connectionStrings>
 </configuration>
