--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ Potestas/Potestas/obj/
 Potestas/Potestas.Apps.Terminal/bin/Debug/netcoreapp2.2/Potestas.Apps.Terminal.deps.json
 Potestas/Potestas.Apps.Terminal/bin/
 Potestas/Potestas.Apps.Terminal/obj/
+Potestas/Potestas.ADO.Plugin/bin/
+Potestas/Potestas.ADO.Plugin/obj/
