module_4: fix the way of loading plugin DLL

--- a/Potestas/Potestas.ADO.Plugin/Potestas.ADO.Plugin.csproj
+++ b/Potestas/Potestas.ADO.Plugin/Potestas.ADO.Plugin.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>D:\EPAM\Mentoring.L1\.NET.Mentoring.L1\Potestas\Potestas.Apps.Terminal\bin\Debug\netcoreapp2.2\netstandard2.0\</OutputPath>
+    <OutputPath></OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
