--- a/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
+++ b/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Potestas\Potestas.csproj" />
   </ItemGroup>
 
