--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ Potestas/Potestas.Apps.Terminal/bin/
 Potestas/Potestas.Apps.Terminal/obj/
 Potestas/Potestas.ADO.Plugin/bin/
 Potestas/Potestas.ADO.Plugin/obj/
+Potestas/Potestas.ORM.Plugin/bin/
+Potestas/Potestas.ORM.Plugin/obj/
