--- a/Potestas/Potestas.ORM.Plugin/Potestas.ORM.Plugin.csproj
+++ b/Potestas/Potestas.ORM.Plugin/Potestas.ORM.Plugin.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -12,14 +12,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Factories\" />
-    <Folder Include="Mappers\" />
-    <Folder Include="Storages\" />
-    <Folder Include="Processors\" />
   </ItemGroup>
 
   <ItemGroup>
