--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ Potestas/Potestas.ADO.Plugin/bin/
 Potestas/Potestas.ADO.Plugin/obj/
 Potestas/Potestas.ORM.Plugin/bin/
 Potestas/Potestas.ORM.Plugin/obj/
+Potestas/Potestas.ORM.CodeFirstAproach/bin/
+Potestas/Potestas.ORM.CodeFirstAproach/obj/
 .vs/
