module_6 add draft implementation

--- a/Potestas/Potestas.Apps.Terminal/App.config
+++ b/Potestas/Potestas.Apps.Terminal/App.config
@@ -7,5 +7,6 @@
     <add name="ObservationConnection"
          providerName="System.Data.SqlClient"
          connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Observation;Integrated Security=True"/>
+    <add name="MongoDBObservationConnection" connectionString="mongodb://localhost/observation"/>
   </connectionStrings>
 </configuration>
