--- a/Potestas/Potestas.MongoDB.Plugin/Potestas.MongoDB.Plugin.csproj
+++ b/Potestas/Potestas.MongoDB.Plugin/Potestas.MongoDB.Plugin.csproj
@@ -1,13 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Mappers\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.9.3" />
