--- a/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
+++ b/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Potestas.MongoDB.Plugin\Potestas.MongoDB.Plugin.csproj" />
     <ProjectReference Include="..\Potestas\Potestas.csproj" />
   </ItemGroup>
 
