module_6 add plugin to the app

--- a/Potestas/Potestas.Apps.Terminal/App.config
+++ b/Potestas/Potestas.Apps.Terminal/App.config
@@ -2,6 +2,8 @@
 <configuration>
   <appSettings>
     <add key="fileStoragePath" value="storage.json"/>
+    <add key="MongoDBName" value="observation"/>
+    <add key="MongoDBCollectionName" value="energyObservations"/>
   </appSettings>
   <connectionStrings>
     <add name="ObservationConnection"
