module_6 add dockerfile and replace the localhost to the dockerhost

--- a/Potestas/Potestas.Apps.Terminal/App.config
+++ b/Potestas/Potestas.Apps.Terminal/App.config
@@ -9,6 +9,6 @@
     <add name="ObservationConnection"
          providerName="System.Data.SqlClient"
          connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=Observation;Integrated Security=True"/>
-    <add name="MongoDBObservationConnection" connectionString="mongodb://localhost/observation"/>
+    <add name="MongoDBObservationConnection" connectionString="mongodb://host.docker.internal:27017/observation"/>
   </connectionStrings>
 </configuration>
