--- a/Potestas/Potestas.API/appsettings.json
+++ b/Potestas/Potestas.API/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Data": {
+    "ConnectionStrings": {
+      "ObservationConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Observation;Integrated Security=True;"
+    }
+  }
 }
