task_2 add draft implementation

--- a/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
+++ b/Potestas/Potestas.Apps.Terminal/Potestas.Apps.Terminal.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Potestas.API.Plugin\Potestas.API.Plugin.csproj" />
     <ProjectReference Include="..\Potestas\Potestas.csproj" />
   </ItemGroup>
 
