--- a/Potestas/Potestas.API.Plugin/Potestas.API.Plugin.csproj
+++ b/Potestas/Potestas.API.Plugin/Potestas.API.Plugin.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
   </ItemGroup>
 
   <ItemGroup>
