--- a/Potestas/Potestas/Potestas.csproj
+++ b/Potestas/Potestas/Potestas.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Potestas.Utils\Potestas.Utils.csproj" />
+  </ItemGroup>
+
 </Project>
