add retry logic

--- a/Potestas/Potestas.API.Plugin/Potestas.API.Plugin.csproj
+++ b/Potestas/Potestas.API.Plugin/Potestas.API.Plugin.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Potestas.Utils\Potestas.Utils.csproj" />
     <ProjectReference Include="..\Potestas\Potestas.csproj" />
   </ItemGroup>
 
